# PythonDevPrac

./: .gitignore  README.md
04032024/0/: 1.txt~  prog.py~
04032024/1/: prog.py
11032024/0/: prog.py~  prog1.py~
11032024/1/: prog.py  prog1.py
19022024/0/: dumper.py  dumper.py~  dumper1.py~  dumper2.py~
19022024/1/: prog.py
20240219/0/: cal  dumper1.py  dumper2.py
20240318/0/: srv1.py~
20240318/1/: client.py  srv.py
20240325/0/: prog.py
20240401/0/: .flake8  prog.py
20240401/0/basepkg/core/: __main__.py
20240401/2/client/: lib.py
20240401/2/common/: __init__.py
20240401/2/mood/client/: __main__.py
20240401/2/mood/server/: __init__.py  __main__.py
20240401/2/server/: __main__.py  lib.py
20240408/0/: prog.py  sayer.py
20240408/0/source/: calendar.rst  conf.py
20240408/1/: .flake8
20240408/1/mood/server/: __init__.py
20240408/1/source/: conf.py
20240415/0/: prog.pot
20240415/1/mood/client/: __init__.py
20240415/1/mood/server/: __init__.py
20240415/2/: server.pot  server1.pot
20240415/2/mood/client/: __init__.py
20240422/0/: client.py  prog1.py  sqroots_server.py  test.py
20240422/1/: server_test.py  start_server.py
20240422/2/: client_test.py
20240427/0/task/: prog.py
20240427/1/0/: prog.py  test.py
20240513/1/: .doit.db  MANIFEST.in  Pipfile  dodo.py  pyproject.toml
20240513/1/Mood.egg-info/: PKG-INFO  SOURCES.txt
20240513/1/i18n/po/ru_RU.UTF-8/LC_MESSAGES/: mood.po
20240513/1/mood/common/: __init__.py
20240513/1/mood/server/: __init__.py
26022024/1/: inp.txt  prog.py
26022024/2/: prog.py
(+8 files in other folders)
